package NYT.NCypress.NProto;

////////////////////////////////////////////////////////////////////////////////

message TMsgExecuteVerb
{
    required bytes NodeId = 1;
    required bytes TransactionId = 2;
    required bool StartAutoTransaction = 3;
    repeated bytes RequestParts = 4;
}

////////////////////////////////////////////////////////////////////////////////

