package NYT.NObjectServer.NProto;

////////////////////////////////////////////////////////////////////////////////

message TMsgExecuteVerb
{
    required bytes object_id = 1;
    required bytes transaction_id = 2;
    repeated bytes request_parts = 3;
}

////////////////////////////////////////////////////////////////////////////////

